--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Recipe-App-Backend
 server.port=8081
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/recipe_app
+spring.datasource.url=jdbc:mysql://zpj83vpaccjer3ah.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/n77v54iie4ocvdfa
 spring.datasource.username=root
 spring.datasource.password=4martie
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
