--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Recipe-App-Backend
 server.port=8081
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://zpj83vpaccjer3ah.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/n77v54iie4ocvdfa
-spring.datasource.username=root
-spring.datasource.password=4martie
+spring.datasource.username=w0t8513u0509eshy
+spring.datasource.password=mg7oppilinkshk1w
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
