--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Recipe-App-Backend
 server.port=8081
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://zpj83vpaccjer3ah.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/laxnwlvf4jz3p529
-spring.datasource.username=cwmji2c0rn41ra2u
-spring.datasource.password=dde7o58si52zlgl7
+spring.datasource.url=jdbc:mysql://ivgz2rnl5rh7sphb.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/ft7htv8rw1a9o9oj
+spring.datasource.username=wk3aqu066vgzmn5u
+spring.datasource.password=k1jgfndt5cg03wg2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
